# SPELL23-Notes

./: .gitignore  Readme.md
.github/workflows/: build.yml
h1/: h1.tex  h1.v
h1/.github/workflow/: build.yml
h2/: h1.tex  h2.tex
h2/lam/: Deep.hs  Main.hs  Shallow.hs
h2/lnt/: CHANGELOG.md  LICENSE  lnt.cabal
h2/lnt/app/: Main.hs
h2/lnt/src/: LNT.hs  Normal.hs  Translate.hs
h3/: h3.tex
h3/utlc/: dune  dune-project  language.ml  lex.mll  parse.mly  syntax.ml  tokens.mly  utlc.ml
h3/utlc/tests/: test.lc
h4/: h4.tex
